src/orgs/usa/data-model/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>