src/orgs/usa/data-model/objects/Account/fields/IsHeadquartersAccount__c.field-meta.xml
<CustomField>
    <fullName>IsHeadquartersAccount__c</fullName>
    <description>Indicates if the account is the headquarters of the organization (i.e. does not have a parent account).</description>
    <formula>ParentId == NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headquarters</label>
    <type>Checkbox</type>
</CustomField>