src/orgs/usa/data-model/objects/Account/fields/IsPatientAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPatientAccount__c</fullName>
    <formula>AND(
  IsPersonAccount,
		RecordType.DeveloperName == &apos;PatientAccount&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Patient Account</label>
    <type>Checkbox</type>
</CustomField>