src/orgs/usa/data-model/objects/Account/fields/LocationAddress__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress__c</fullName>
    <description>Specific for Location Accounts. The address of the location of the account.</description>
    <label>Location Address</label>
    <type>Address</type>
</CustomField>