src/orgs/usa/data-model/objects/Account/fields/LocationArtemisExternalId__c.field-meta.xml
<CustomField>
    <fullName>LocationArtemisExternalId__c</fullName>
    <description>Specific for Location Accounts. Id of the Location in Artemis</description>
    <externalId>true</externalId>
    <label>Location Artemis Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>