src/orgs/usa/data-model/objects/Account/fields/LocationBrand__c.field-meta.xml
<CustomField>
    <fullName>LocationBrand__c</fullName>
    <description>Specific for Location Accounts. The brand of the location.</description>
    <label>Location Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>