src/orgs/usa/data-model/objects/Account/fields/LocationEmrServer__c.field-meta.xml
<CustomField>
    <fullName>LocationEmrServer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Specific for Location Accounts. The EMR Server associated with the location.</description>
    <label>Artemis Server</label>
    <referenceTo>EmrServer__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>