src/orgs/usa/data-model/objects/Account/fields/LocationShortFormat__c.field-meta.xml
<CustomField>
    <fullName>LocationShortFormat__c</fullName>
    <description>Specific for Location Accounts. The short address format of the location address.</description>
    <formula>TRIM(LocationAddress__City__s + &apos; - &apos; + TEXT(LocationAddress__StateCode__s))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>