src/orgs/usa/data-model/objects/Account/fields/PatientCarrotPatient__c.field-meta.xml
<CustomField>
    <fullName>PatientCarrotPatient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrot Patient</label>
    <type>Checkbox</type>
</CustomField>