src/orgs/usa/data-model/objects/Account/fields/PatientHowDidYouHearAboutUs__c.field-meta.xml
<CustomField>
    <fullName>PatientHowDidYouHearAboutUs__c</fullName>
    <description>Specific for Patient Accounts. Indicates the method by which the patient heard about us.</description>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Friend/Relative</fullName>
            </value>
            <value>
                <fullName>Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>Facebook/Instagram</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Therapist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>