src/orgs/usa/data-model/objects/Account/fields/PatientRequestedPatientAdvocate__c.field-meta.xml
<CustomField>
    <fullName>PatientRequestedPatientAdvocate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specific for Patient Accounts. Indicates if the patient requested a patient advocate.</description>
    <label>Requested Patient Advocate</label>
    <type>Checkbox</type>
</CustomField>