src/orgs/usa/data-model/objects/Account/fields/PatientRollupAdditionalEmails__c.field-meta.xml
<CustomField>
    <fullName>PatientRollupAdditionalEmails__c</fullName>
    <description>Specific for Patient Accounts. Rollup field that contains all the Additional Email values from the related PatientServerProfile__c records to this Patient Account.</description>
    <label>Additional Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>