src/orgs/usa/data-model/objects/Account/fields/PatientRollupBiologicalSex__c.field-meta.xml
<CustomField>
    <fullName>PatientRollupBiologicalSex__c</fullName>
    <description>Specific for Patient Accounts. Rollup field that contains all the biological sex values from the related PatientServerProfile__c record to this Patient Account.</description>
    <label>Biological Sex</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>