src/orgs/usa/data-model/objects/Account/fields/PatientRollupEmails__c.field-meta.xml
<CustomField>
    <fullName>PatientRollupEmails__c</fullName>
    <description>Specific for Patient Accounts. Rollup field that contains all the Email values from the related PatientServerProfile__c records to this Patient Account.</description>
    <label>Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>