src/orgs/usa/data-model/objects/Account/fields/PatientRollupMaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientRollupMaritalStatus__c</fullName>
    <description>Specific for Patient Accounts. Rollup field that contains all the marital status values from the related PatientServerProfile__c record to this Patient Account.</description>
    <label>Marital Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>