src/orgs/usa/data-model/objects/Account/fields/PatientRollupPronouns__c.field-meta.xml
<CustomField>
    <fullName>PatientRollupPronouns__c</fullName>
    <description>Specific for Patient Accounts. Rollup field that contains all the pronouns values from the related PatientServerProfile__c record to this Patient Account.</description>
    <label>Pronouns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>He/Him</fullName>
                <label>he/him</label>
            </value>
            <value>
                <fullName>She/Her</fullName>
                <label>she/her</label>
            </value>
            <value>
                <fullName>They/Them</fullName>
                <label>they/them</label>
            </value>
            <value>
                <fullName>He/They</fullName>
                <label>he/they</label>
            </value>
            <value>
                <fullName>She/They</fullName>
                <label>she/they</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>