src/orgs/usa/data-model/objects/Account/fields/PatientRollupRace__c.field-meta.xml
<CustomField>
    <fullName>PatientRollupRace__c</fullName>
    <description>Specific for Patient Accounts. Rollup field that contains all the race values from the related PatientServerProfile__c record to this Patient Account. This field was not defined as a picklist due to the existance of picklist entry values with larger text lengths higher than the maximum allowed for a picklist field.</description>
    <label>Race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>