src/orgs/usa/data-model/objects/Account/fields/PatientRollupSexualOrientation__c.field-meta.xml
<CustomField>
    <fullName>PatientRollupSexualOrientation__c</fullName>
    <description>Specific for Patient Accounts. Rollup field that contains all the sexual orientation values from the related PatientServerProfile__c record to this Patient Account.</description>
    <label>Sexual Orientation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Straight or heterosexual</fullName>
            </value>
            <value>
                <fullName>Lesbian, gay or homosexual</fullName>
            </value>
            <value>
                <fullName>Bisexual</fullName>
            </value>
            <value>
                <fullName>Something else</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Choose not to disclose</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>