src/orgs/usa/data-model/objects/Account/RequesterComments__c.field-meta.xml
<CustomField>
    <fullName>RequesterComments__c</fullName>
    <label>Webform Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>