src/orgs/usa/data-model/objects/Account/fields/RetiredBusiness__c.field-meta.xml
<CustomField>
    <fullName>RetiredBusiness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the business is retired.</description>
    <label>Retired Business</label>
    <type>Checkbox</type>
</CustomField>