src/orgs/usa/data-model/objects/Account/recordTypes/BusinessAccount.recordType-meta.xml
<RecordType>
    <fullName>BusinessAccount</fullName>
    <active>true</active>
    <label>Business Account</label>
</RecordType>