src/orgs/usa/data-model/objects/Account/recordTypes/LocationAccount.recordType-meta.xml
<RecordType>
    <fullName>LocationAccount</fullName>
    <active>true</active>
    <description>Defines a IVIRMA Clinic / Medical Center - This type of accounts will be mainly created via Artemis Integration.</description>
    <label>IVIRMA Location Account</label>
</RecordType>