src/orgs/usa/data-model/objects/Account/listViews/AllLocations.listView-meta.xml
<ListView>
    <fullName>AllLocations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>LocationBrand__c</columns>
    <columns>LocationShortFormat__c</columns>
    <columns>RetiredBusiness__c</columns>
    <columns>LocationEmrServer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.LocationAccount</value>
    </filters>
    <label>All Locations</label>
</ListView>